--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,8 @@ LazyData: true
 Depends:
     R (>= 3.5.0)
 Suggests:
+    knitr,
+    rmarkdown,
     roxygen2,
     testthat (>= 3.0.0)
 RoxygenNote: 7.3.3
@@ -24,3 +26,4 @@ Imports:
     ggnewscale,
     cowplot
 Config/testthat/edition: 3
+VignetteBuilder: knitr
