Final push of 2025
Mainly documentation harmonization

Font & colors stub

Support for dataframes in range_killer

Added a .pptx for future devs

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,6 +24,8 @@ Imports:
     rlang,
     BSDA,
     ggnewscale,
-    cowplot
+    cowplot,
+    showtext,
+    sysfonts
 Config/testthat/edition: 3
 VignetteBuilder: knitr
